# fasteth

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json  pyproject.toml
fasteth/: exceptions.py  models.py  rpc.py  types.py  utils.py
tests/: test_fasteth.py
