[tool.poetry]
name = "fasteth"
version = "0.1.0"
description = "A lightweight, python native, async interface for the Ethereum JSON RPC."
authors = ["0xAlcibiades <info@dontemail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = {extras = ["http2"], version = ">=0.16"}
eth-typing = "^2.2.2"
eth-utils = "^1.10.0"
pydantic = "^1.8.1"
eth-hash = {extras = ["pycryptodome"], version = "^0.3.1"}
orjson = "^3.5.1"
eth-account = "^0.5.4"
setuptools = "^65.6.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
