[tool.poetry]
name = "fasteth"
version = "1.0.1"
description = "A lightweight, python native, async interface for the Ethereum JSON RPC."
authors = ["Tony Valentine <tvalentine@dedaub.com>", "0xAlcibiades <info@dontemail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = {extras = ["http2"], version = ">=0.16"}
eth-typing = "^3.3.0"
eth-utils = {version = "^2.1.0"}
pydantic = "^1.8.1"
orjson = "^3.5.1"
setuptools = "^65.6.3"
pycryptodome = "^3.17" # need this since eth-utils wont install a backend for eth-hash

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.20.3"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
